# claude-code-template

./: .env.development  .env.test-basic  .env.test-large  .env.test-malformed  .env.test-security  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_TOOLS.md  LICENSE  MEMORY.md  README.md  TODO.md  VERSIONING.md  bootstrap.sh  choreography_patterns.py  claude_config.json  install.sh  master-prompt.md  migrate-spec.py  negative-triggers-design.md  validate-template.sh  verify-setup.sh
.claude/: config.json  settings.json
.claude.support/: master-prompt.md
.devcontainer/: .gitignore  README.md  SECURITY.md  build-devcontainer.sh  clean.sh  devcontainer.json  env.template  initialize.sh  postCreate.sh  secure-secrets.sh  security-validation.sh  setup-docker-volume.sh  setup.sh  up.sh
.mcp/: README.md
.support/: memory-protocol.md
.support/mcp-servers/perplexity/: .env.example  README.md  pyproject.toml  test_logging.py
.support/mcp-servers/perplexity/src/perplexity_mcp/: __init__.py  client.py  main.py  server.py
.support/mcp-servers/perplexity/src/perplexity_mcp/utils/: __init__.py  logging.py
.support/mcp-servers/perplexity/tests/: __init__.py  conftest.py  test_client.py
acf/: build.sh  pyproject.toml
acf/acf/: main.py
acf/src/acf/: main.py
acf/src/acf/data/acf/: CHANGELOG.md
acf/src/acf/data/claude/agents/specialists/: git-workflow.md
acf/tests/: test_integration.py  test_main.py
analysis/: cli-requirements-analysis-issue-48.md  issue-13-agent-overlap-analysis.md  issue-61-production-repository-layout.md  production-repository-layout.md  specialized-agent-triggers-issue-33.md
archive/: CLAUDE.orig  automation-removed.md  claude-commands-guidelines.md.backup  research-verification-protocol.md.backup  security-workflows.md.backup  stack-mapping.md.backup
docs/: PRINCIPLES.md  README.md  agent-usage.md  claude-code-tools.md  configuration-reference.md  copying-instructions.md  customization.md  features.md  getting-started.md  launch-claude-usage.md  manual-setup-guide.md  manual-setup-index.md  memory-system.md  migration-guide.md  mycc-usage.md  setup-scenarios.md  todo-management-system.md  todo-system-implementation.md  todo-system.md  versioning.md
memories/: agent-parallelism-alternatives.md  claude-md-analysis-task.md  successful-tag-v2-0-1.md
research/: readme-analysis-2025.md
scripts/: claude-todo  install-todo-system.sh  migrate-todos.py  scan-todos.py  setup-claude-memory.sh  test-session-logging.sh  todo-manager.py  worktree-cleanup.sh  worktree-create.sh
specs/: github-issues-migration-plan.md  writer-agent-and-file-modification-protocol.md
src/openai-structured-mcp/: README.md  integration_test.py  pyproject.toml
src/openai-structured-mcp/src/openai_structured_mcp/: __init__.py  client.py  main.py  schemas.py  server.py
src/openai-structured-mcp/src/openai_structured_mcp/utils/: __init__.py  logging.py
src/openai-structured-mcp/tests/: __init__.py  conftest.py  test_client.py  test_logging.py  test_schemas.py  test_server.py
tests/: README.md  test-execution-summary.md
todos/: add-claude-code-alias.md  create-cleanup-agent.md  create-codebase-specific-agent-optimization.md  document-mcp-memory-server-storage.md  document-parallel-agent-clusters.md  implement-codespace-persistent-memory.md  move-support-files-to-claude-support.md  remove-artificial-sequential-dependencies.md  update-agent-usage-instructions.md
(+345 files in other folders)
