[project]
name = "ai-code-forge-cli"
version = "0.1.0"
description = "Configuration management tool for AI Code Forge"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
acf = "acf.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acf"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]