[project]
name = "openai-structured-mcp-server"
version = "0.1.0"
description = "MCP server for OpenAI structured output integration"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "httpx",
    "python-dotenv",
    "openai>=1.12.0",
    "pydantic>=2.0",
    "jsonschema>=4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
openai-structured-mcp = "openai_structured_mcp.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "pytest-httpx>=0.30",
    "pytest-cov>=4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openai_structured_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]