[project]
name = "perplexity-mcp-server"
version = "0.1.0"
description = "MCP server for Perplexity API integration"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "httpx",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
perplexity-mcp = "perplexity_mcp.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "pytest-httpx>=0.30",
    "pytest-cov>=4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]